--- a/main.html
+++ b/main.html
@@ -1,16 +1,93 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Codespaces
+Marketplace
+Explore
+ 
+@sekhsabiruddin 
+acciojob
+/
+bootstrap-carousel-Hetanshu
+Public
+generated from acciojob/bootstrap-carousel
+Fork your own copy of acciojob/bootstrap-carousel-Hetanshu
+Code
+Issues
+Pull requests
+Actions
+Projects
+Security
+Insights
+bootstrap-carousel-Hetanshu/main.html
+@Hetanshu
+Hetanshu created a submission
+Latest commit dae5e70 3 hours ago
+ History
+ 2 contributors
+@Hetanshu@acciojob
+47 lines (40 sloc)  2.38 KB
+
 <!DOCTYPE html>
 
 <html>
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+
+  <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item  first-slide">
+      <img src="https://c4.wallpaperflare.com/wallpaper/632/34/549/technology-monitor-alpha-coders-binary-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item second-slide">
+      <img src="https://c4.wallpaperflare.com/wallpaper/817/87/825/programmer-coder-admin-administrator-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item third-slide active">
+      <img src="https://c4.wallpaperflare.com/wallpaper/22/603/820/artistic-alpha-coders-earth-space-hd-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+    </div>
+	<div class="carousel-item fourth-slide">
+      <img src="https://c4.wallpaperflare.com/wallpaper/817/87/825/programmer-coder-admin-administrator-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item fifth-slide">
+      <img src="https://c4.wallpaperflare.com/wallpaper/22/603/820/artistic-alpha-coders-earth-space-hd-wallpaper-preview.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev glyphicon-chevron-left" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon left carousel-control glyphicon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next glyphicon-chevron-right" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+    <span class="carousel-control-next-icon right carousel-control glyphicon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+   	
     <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
 
 </html>
+Footer
+© 2023 GitHub, Inc.
+Footer navigation
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+bootstrap-carousel-Hetanshu/main.html at master · acciojob/bootstrap-carousel-Hetanshu
